--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2025 Fortune Capital Group. All rights reserved.</p>
+            <p>&copy; 2025 Fortune Capital Group. All rights reserved. <span style="margin-left:1em;"><a href="privacy.html" style="color:#000;text-decoration:underline;">Privacy Policy</a></span></p>
         </div>
     </footer> 
 
