privacy policy update

--- a/privacy.html
+++ b/privacy.html
@@ -57,7 +57,7 @@
         </ul>
         <h2>Contact Us</h2>
         <p>If you have any questions or concerns about this Privacy Policy or your data, please contact:</p>
-        <p><strong>Jakob Espeland</strong><br>Email: <a href="mailto:info@fortunecapitalgroup.com">info@fortunecapitalgroup.com</a></p>
+        <p><strong>~add contact name~</strong><br>Email: <a href="mailto:FCGwebsite@gmail.com">FCGwebsite@gmail.com</a></p>
     </main>
     <footer class="footer">
         <div class="footer-content">
