--- a/about.html
+++ b/about.html
@@ -1,3 +1,9 @@
+<!--
+    about.html
+    Fortune Capital Group - About Page
+    This page provides information about the company, its mission, and values.
+    All sections and scripts are documented for maintainability.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
