--- a/closings.html
+++ b/closings.html
@@ -1,3 +1,9 @@
+<!--
+    closings.html
+    Fortune Capital Group - Closed Deals Page
+    This page displays a grid of recent closed deals, dynamically loaded from the backend API.
+    All major sections and scripts are documented for maintainability.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
