--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,9 @@
+<!--
+    contact.html
+    Fortune Capital Group - Contact Page
+    This page provides a contact form and company contact information.
+    All major sections and scripts are documented for maintainability.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
