--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+    index.html
+    Fortune Capital Group - Home Page
+    This is the main landing page for the company website, featuring navigation, hero, team, closings preview, and footer.
+    All major sections and scripts are documented for maintainability.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
