--- a/team.html
+++ b/team.html
@@ -1,3 +1,9 @@
+<!--
+    team.html
+    Fortune Capital Group - Team Page
+    This page introduces the company team members and their roles.
+    All major sections and scripts are documented for maintainability.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
