--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Property Closings Section -->
     <section class="closings-preview">
         <div class="closings-content">
-            <h2>Recent Spotlight Closings</h2>
+            <h2>Today's Spotlight Closings</h2>
             <div class="closings-grid" id="spotlightClosingsGrid">
                 <!-- Spotlight closings will be loaded dynamically -->
             </div>
