--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1>Fortune Capital Group</h1>
-        <p>Your trusted partner in business solutions and strategic growth. We help companies achieve their goals through innovative approaches and proven methodologies.</p>
+        <p>Your trusted commercial real estate finance advisors. We are closers, and we are honest.</p>
         <a href="contact.html" class="cta-button">Get Started Today</a>
     </section>
 
@@ -61,7 +61,13 @@
             
             <div class="team-intro-center">
                 <h2>Meet Our Expert Team</h2>
-                <p>Our dedicated team of professionals brings together decades of combined experience in business strategy, financial planning, and market analysis. We work collaboratively to deliver exceptional results for our clients. Each member of our team is committed to understanding your unique business challenges and developing tailored solutions that drive sustainable growth and long-term success.</p>
+                <p>Our dedicated team of professionals brings together over 25 years of 
+                    combined experience in real estate finance, underwriting, and accounting. 
+                    We strive to understand your deal better than you, so we can ensure you are 
+                    provided with the strongest terms, at a level that will close even in the 
+                    toughest environments. Each member of our team is committed to understanding 
+                    your unique business challenges and developing tailored solutions that drive 
+                    sustainable growth and long-term success.</p>
                 <a href="team.html" class="team-button">MEET THE TEAM</a>
             </div>
             
