--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
         <div class="features">
             <div class="feature">
                 <h3>Expert Team</h3>
-                <p>Our experienced professionals bring years of industry knowledge and expertise to every project.</p>
+                <p>Our team understands that a deep dive and thorough underwriting is the only way to provide the strongest terms.</p>
             </div>
             <div class="feature">
-                <h3>Proven Results</h3>
-                <p>We have a track record of successful implementations and satisfied clients across various industries.</p>
+                <h3>Proven Track Record</h3>
+                <p>We have a track record of over $5B in transaction experience, across multiple asset classes and loan structures nationwaide.</p>
             </div>
             <div class="feature">
                 <h3>Innovative Solutions</h3>
-                <p>We stay ahead of industry trends to provide cutting-edge solutions that drive real business value.</p>
+                <p>We strive to stay in touch with all lenders in the market to provide innovative solutions from the simplest to most complex transactions.</p>
             </div>
         </div>
     </main>
