--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
     <main class="content">
         <div class="about-section">
             <h2>Our Story</h2>
-            <p>Fortune Capital Group is a CRE Debt Advisory Firm with experience in all asset classes including multifamily, retail, industrial, office, and special-use properties. We have been involved in over $3B in transactions over the 5 years since inception.</p>
-            <p>Founded by Jake Gluck, and joined by Mike Helmreich, CPA – previously a senior UW at Meridian Capital Group - our principals are based on full transparency with our lenders and clients, hard work, and dedication to make sure that any deal we take on will close. In the recent tumultuous debt market, we have found tremendous success with this credo.</p>
-            <p>When a market becomes complex, only dedicated, focused brokers can provide the best terms and reliably close loans. We have relationships with all of the top tier CMBS, Agency, and local bank lenders across the country, and consider many of them close friends.</p>
+            <p>Fortune Capital Group is a CRE Debt Advisory Firm with experience in all asset classes including multifamily, retail, industrial, office, and special-use properties. We have been involved in over $3B in transactions over the 5 years since inception, and multiple Billions more over our careers.</p>
+            <p>Founded by Jake Gluck in 2019, Mike Helmreich, CPA – previously a senior UW at Meridian Capital Group – joined in 2024. Our principals are based on full transparency with our lenders and clients, hard work, and dedication to make sure that any deal we take on will close. In the recent tumultuous debt market, we have found tremendous success with this credo.</p>
+            <p>When a market becomes complex, only dedicated, focused brokers can provide the best terms and reliably close loans. We have relationships with all of the top tier CMBS, Agency, and local bank lenders across the country, and consider many of them close friends. By leveraging these relationships, we have been able to close both simple, and extremely complex transactions.</p>
         </div>
 
         <div class="mission-vision">
