--- a/team.html
+++ b/team.html
@@ -66,9 +66,10 @@
                 <div class="team-member">
                     <div class="member-photo">JG</div>
                     <div class="member-info">
-                        <div class="member-name">Jacob Gluck</div>
+                        <div class="member-name">Jake Gluck</div>
                         <div class="member-title">CEO and Founder</div>
-                        <div class="member-bio">Team Member Description</div>
+                        <div class="member-bio"></div>I've been in Commercial Real Estate Finance for over 12 years, and founded Fortune Capital Group, a highly active Commercial Real Estate Debt and Equity brokerage, with the goal of creating a tremendously functional experience for both clients and lenders alike. My motto has always been to tackle conflict head on with full transparency. This has allowed us to grow a firm in a market that has been nothing short of tumultuous.
+                        As an athlete, I know that success only comes with the strength of your team. So we have built out a tremendous underwriting team to ensure that lenders love us, and clients know they can rely on us to get their deals done.
                     </div>
                 </div>
 
