Michael Helmreich headshot

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             
             <div class="team-intro-right">
-                <img src="headshotPlaceholder.jpg" alt="Michael Helmreich" class="team-headshot">
+                <img src="MichaelHelmreich.jpg" alt="Michael Helmreich" class="team-headshot">
                 <p class="team-name">Michael Helmreich</p>
                 <p class="team-title">Senior Vice President</p>
             </div>
