Michael Helmreich headshot

--- a/team.html
+++ b/team.html
@@ -74,7 +74,9 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo">SM</div>
+                    <div class="member-photo">
+                        <img src="MichaelHelmreich.jpg" alt="Michael Helmreich" class="team-headshot">
+                    </div>
                     <div class="member-info">
                         <div class="member-name">Michael Helmreich</div>
                         <div class="member-title">Senior Vice President</div>
