team member photo fixes

--- a/team.html
+++ b/team.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo">SM</div>
+                    <div class="member-photo">MH</div>
                     <div class="member-info">
                         <div class="member-name">Michael Helmreich</div>
                         <div class="member-title">Senior Vice President</div>
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo">MJ</div>
+                    <div class="member-photo">JB</div>
                     <div class="member-info">
                         <div class="member-name">Joseph Burnstein</div>
                         <div class="member-title">Commercial Morgage Broker</div>
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo">JS</div>
+                    <div class="member-photo">AS</div>
                     <div class="member-info">
                         <div class="member-name">Asher Spingarn</div>
                         <div class="member-title">Underwriter</div>
