Added Michael Helmreich's headshot to team.css

--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 
                 <div class="team-member">
                     <div class="member-photo">
-                        <img src="MichaelHelmreich.jpg" alt="Michael Helmreich" class="member-image">
+                        <img src="MichaelHelmreichSmall.jpg" alt="Michael Helmreich" class="member-image">
                     </div>
                     <div class="member-info">
                         <div class="member-name">Michael Helmreich</div>
