changes layout of team page

--- a/team.html
+++ b/team.html
@@ -64,12 +64,14 @@
         <div class="leadership-section">
             <!-- Jake Gluck -->
             <div class="team-member-horizontal">
-                <div class="member-photo-horizontal">
-                    <div class="member-photo-placeholder">JG</div>
-                </div>
-                <div class="member-info-horizontal">
+                <div class="member-photo-section">
+                    <div class="member-photo-horizontal">
+                        <div class="member-photo-placeholder">JG</div>
+                    </div>
                     <div class="member-name">Jake Gluck</div>
                     <div class="member-title">CEO and Founder</div>
+                </div>
+                <div class="member-info-horizontal">
                     <div class="member-bio">I've been in Commercial Real Estate Finance for over 12 years, and founded Fortune Capital Group, a highly active Commercial Real Estate Debt and Equity brokerage, with the goal of creating a tremendously functional experience for both clients and lenders alike. My motto has always been to tackle conflict head on with full transparency. This has allowed us to grow a firm in a market that has been nothing short of tumultuous.
                     As an athlete, I know that success only comes with the strength of your team. So we have built out a tremendous underwriting team to ensure that lenders love us, and clients know they can rely on us to get their deals done.</div>
                 </div>
@@ -77,12 +79,14 @@
 
             <!-- Michael Helmreich -->
             <div class="team-member-horizontal">
-                <div class="member-photo-horizontal">
-                    <img src="MichaelHelmreichSmall.jpg" alt="Michael Helmreich" class="member-image-horizontal">
-                </div>
-                <div class="member-info-horizontal">
+                <div class="member-photo-section">
+                    <div class="member-photo-horizontal">
+                        <img src="MichaelHelmreichSmall.jpg" alt="Michael Helmreich" class="member-image-horizontal">
+                    </div>
                     <div class="member-name">Michael Helmreich</div>
                     <div class="member-title">Senior Vice President</div>
+                </div>
+                <div class="member-info-horizontal">
                     <div class="member-bio">
                         <p>Michael Helmreich brings almost 15 years of experience in commercial real estate finance, underwriting, and capital markets execution. As Vice President and Senior Underwriter at Fortune Capital Group, he leads the structuring and analysis of complex financing transactions across multifamily, mixed-use, office, retail, and industrial assets nationwide. His disciplined approach combining rigorous underwriting with creative deal execution, has helped sponsors secure optimal financing through saving banks, agency lenders, CMBS programs, and private debt funds.</p>
 
@@ -97,24 +101,28 @@
 
             <!-- Joseph Burnstein -->
             <div class="team-member-horizontal">
-                <div class="member-photo-horizontal">
-                    <div class="member-photo-placeholder">JB</div>
-                </div>
-                <div class="member-info-horizontal">
+                <div class="member-photo-section">
+                    <div class="member-photo-horizontal">
+                        <div class="member-photo-placeholder">JB</div>
+                    </div>
                     <div class="member-name">Joseph Burnstein</div>
                     <div class="member-title">Commercial Mortgage Broker</div>
+                </div>
+                <div class="member-info-horizontal">
                     <div class="member-bio">Joseph has 4 years of experience in commercial real estate finance, including 3 years in underwriting before moving into originations. His underwriting background and hands-on work with lenders give him a edge in the market, allowing him to understand deals well and navigate financing with insight and precision. Originally from Cleveland, he brings the "out-of-town" mindset of being approachable and always reachable, while his New York experience gives him the toughness and persistence to get deals done. This balance, personable yet relentless, makes him a trusted partner for property owners looking for someone to get the deal done.</div>
                 </div>
             </div>
 
             <!-- Asher Spingarn -->
             <div class="team-member-horizontal">
-                <div class="member-photo-horizontal">
-                    <div class="member-photo-placeholder">AS</div>
-                </div>
-                <div class="member-info-horizontal">
+                <div class="member-photo-section">
+                    <div class="member-photo-horizontal">
+                        <div class="member-photo-placeholder">AS</div>
+                    </div>
                     <div class="member-name">Asher Spingarn</div>
                     <div class="member-title">Underwriter</div>
+                </div>
+                <div class="member-info-horizontal">
                     <div class="member-bio">Asher Spingarn is a real estate finance professional specializing in commercial mortgage underwriting and capital placement. At Fortune Capital Group, he plays a key role in structuring and underwriting debt for multifamily, mixed-use, and ground-up construction projects nationwide. Asher brings a strong analytical skill set to each transaction, with expertise in financial modeling, rent roll analysis, market research, and deal sizing. He works closely with sponsors and lenders to create tailored financing solutions that maximize proceeds while mitigating risk. Asher holds an MBA from Yeshiva University, where he graduated at the top of his class, reflecting his dedication to excellence and strategic thinking. Driven by a commitment to precision, transparency, and execution, he focuses on delivering clear and compelling narratives that help sponsors achieve their capital goals. His approach blends institutional-level underwriting with a personal touch, building lasting relationships across the commercial real estate landscape.</div>
                 </div>
             </div>
