--- a/team.html
+++ b/team.html
@@ -68,7 +68,7 @@
                     <div class="member-photo-horizontal">
                         <div class="member-photo-placeholder">JG</div>
                     </div>
-                    <div class="member-name">Jake Gluck</div>
+                    <div class="member-name">Jacob Gluck</div>
                     <div class="member-title">CEO and Founder</div>
                 </div>
                 <div class="member-info-horizontal">
