--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <h1>Fortune Capital Group</h1>
-        <p>Your trusted commercial real estate finance advisors. We are closers, and we are honest.</p>
+        <p>Where closers come to close.</p>
         <a href="contact.html" class="cta-button">Get Started Today</a>
     </section>
 
@@ -55,26 +55,25 @@
         <div class="team-intro-content">
             <div class="team-intro-left">
                 <img src="headshotPlaceholder.jpg" alt="Jacob Gluck" class="team-headshot">
-                <p class="team-name">Jacob Gluck</p>
+                <p class="team-name">Jake Gluck</p>
                 <p class="team-title">Founder and CEO</p>
             </div>
             
             <div class="team-intro-center">
                 <h2>Meet Our Expert Team</h2>
-                <p>Our dedicated team of professionals brings together over 25 years of 
-                    combined experience in real estate finance, underwriting, and accounting. 
-                    We strive to understand your deal better than you, so we can ensure you are 
-                    provided with the strongest terms, at a level that will close even in the 
-                    toughest environments. Each member of our team is committed to understanding 
-                    your unique business challenges and developing tailored solutions that drive 
-                    sustainable growth and long-term success.</p>
+                <p>We live your deal. This isn’t a 9-5 for us. This is a lifestyle. 
+                    Our deep underwriting staff of highly educated CPA’s and MBA’s 
+                    understands your numbers like it was their building. And our years 
+                    of relationship building with bankers gives us an edge with lenders. 
+                    We are focused, driven, and creative – the only recipe that you can 
+                    rely on to close deals in a volatile market.</p>
                 <a href="team.html" class="team-button">MEET THE TEAM</a>
             </div>
             
             <div class="team-intro-right">
                 <img src="MichaelHelmreichSmall.jpg" alt="Michael Helmreich" class="team-headshot">
                 <p class="team-name">Michael Helmreich</p>
-                <p class="team-title">Senior Vice President</p>
+                <p class="team-title">Partner</p>
             </div>
         </div>
     </section>
@@ -89,11 +88,11 @@
             </div>
             <div class="feature">
                 <h3>Proven Track Record</h3>
-                <p>We have a track record of over $5B in transaction experience, across multiple asset classes and loan structures nationwaide.</p>
+                <p>We have a track record of over $5B in transaction experience, across multiple asset classes and loan structures nationwide.</p>
             </div>
             <div class="feature">
                 <h3>Innovative Solutions</h3>
-                <p>We strive to stay in touch with all lenders in the market to provide innovative solutions from the simplest to most complex transactions.</p>
+                <p>Creativity is our goal. Our deep experience allows us to understand and close on the most complex transactions.</p>
             </div>
         </div>
     </main>
